===============
Version 0.18.0
===============
* Now all GomElement attributes are available from 'attributes' property,
  this include basic and Object's implementing GomProperty
* New CSS Selector machinery thanks to Yannick Inizan <inizan.yannick@gmail.com>
* New Meson setup, to allow GXml as a subproject
* GomCollection's name renamed to convert them as default interfaces to implement
* Deprecated TNode and derived classes
* Deprecated Node and derived classes
* Deprecated Serializable and derived classes
* Fixes on Unit Tests
* Updated translations:
    Hungarian  by                Balázs Úr <balazs@urbalazs.hu>
    Indonesian by                Kukuh Syafaat <kukuhsyafaat@gnome.org>
    German     by                Tim Sabsch <tim@sabsch.com>
    Spanish    by                Daniel Mustieles <daniel.mustieles.contractor@bbva.com>
    Swedish    by                Anders Jonsson <anders.jonsson@norsjovallen.se>
    Brazilian  by                Rafael Fontenelle <rafaelff@gnome.org>
    Czech      by                Marek Černocký <marek@manet.cz>
    Polish     by                Piotr Drąg <piotrdrag@gmail.com>


===============
Version 0.16.3
===============
* Fix GDocument namespaces by Chris Lee <clee@mg8.org>
* Fix Issue #2: Adding gxml.deps.in in distribution tar
* Autotools: Updated address for issues to GNOME's GitLab instance
* README: Updated for Autotools, Meson and documentation
* Updated translations:
    Brazilian Portuguese by     Rafael Fontenelle <rafaelff@gnome.org>
    Indonesian by               Kukuh Syafaat <syafaatkukuh@gmail.com>
    Swedish by                  Anders Jonsson <anders.jonsson@norsjovallen.se>
    Spanish  by                 Daniel Mustieles <daniel.mustieles@gmail.com>
    German by                   Tim Sabsch <tim@sabsch.com>
    Hungarian by                Balázs Úr <balazs@urbalazs.hu>

===============
Version 0.16.2
===============

* Fix typos in translatable strings by Piotr Drąg <piotrdrag@gmail.com>